--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -157,16 +157,21 @@
         font-size: 18px;
     }
     .facts-entities{
+        display: -ms-flexbox;
         display: flex;
         @media (max-width: 992px){
             flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
         }
     }
     .fact{
         margin-top: 20px;
+        -ms-flex-basis: 0;
+        -ms-flex-grow: 1;
         flex-basis: 0;
         flex-grow: 1;
         @media (max-width: 992px){
+            -ms-flex-basis: 100%;
             flex-basis: 100%;
         }
     }
