--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,6 @@
     });
   </script>
   <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
 
 </head>
