Change some home's content styles

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -36,10 +36,12 @@
 	a{
 		color: #fff;
 		text-decoration: underline;
+		font-weight: bold;
 	}
 }
 .h1_about_yog{
 	font-family: Montserrat, sans-serif;
+	text-transform: uppercase;
 }
 .news_section {
     background-image: url(../images/bkg_blue.png);
