Relative paths to root

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="footer_logo col-md-4">
-        <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="images/l2020_white.png" srcset="images/l2020_white-p-500x165.png 500w, images/l2020_white.png 637w" width="307">
+        <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="images/l2020_white.png" srcset="/images/l2020_white-p-500x165.png 500w, /images/l2020_white.png 637w" width="307">
       </div>
       <div class="col-md-4">
         <div class="copy">copyrights © 2017 | Lausanne2020</div>
@@ -35,24 +35,24 @@
         <div class="row">
           <div class="col-md-3 col-xs-6">
             <a class="links_games" href="{% t footer.link.tokyo %}" target="_blank">
-          <img height="80" src="images/2020_1.png">
+          <img height="80" src="/images/2020_1.png">
         </a>
           </div>
           <div class="col-md-3 col-xs-6">
             <a class="" href="{% t footer.link.beijing %}" target="_blank">
-          <img height="80" src="images/Beijing_2022_emblem.jpg">
+          <img height="80" src="/images/Beijing_2022_emblem.jpg">
         </a>
           </div>
         
         
           <div class="col-md-3 col-xs-6">
             <a class="links_games" href="{% t footer.link.buenos %}" target="_blank">
-          <img height="80" src="images/Buenos_Aires_2018_logo.jpg">
+          <img height="80" src="/images/Buenos_Aires_2018_logo.jpg">
         </a>
           </div>
           <div class="col-md-3 col-xs-6">
             <a class="links_games" href="{% t footer.link.pyeongChang %}" target="_blank">
-          <img height="80" src="images/2018_2.png">
+          <img height="80" src="/images/2018_2.png">
         </a>
           </div>
         </div>
@@ -64,13 +64,13 @@
       <div class="col-md-6 footer-pics">
         <div class="links_social">
           <a class="links_games w-inline-block" href="https://www.instagram.com/lausanne2020" target="_blank">
-            <img height="40" sizes="40px" src="images/Instagram-logo.png" srcset="images/Instagram-logo.png 500w, images/Instagram-logo.png 512w">
+            <img height="40" sizes="40px" src="/images/Instagram-logo.png" srcset="/images/Instagram-logo.png 500w, /images/Instagram-logo.png 512w">
           </a>
           <a class="links_games w-inline-block" href="https://www.facebook.com/lausanne2020/" target="_blank">
-            <img height="40" sizes="40px" src="images/facebook-icon-preview-1.png" srcset="images/facebook-icon-preview-1.png 500w, images/facebook-icon-preview-1.png 512w">
+            <img height="40" sizes="40px" src="/images/facebook-icon-preview-1.png" srcset="/images/facebook-icon-preview-1.png 500w, /images/facebook-icon-preview-1.png 512w">
           </a>
           <a class="w-inline-block" href="https://twitter.com/lausanne2020" target="_blank">
-            <img height="28" src="images/20161107041729Twitter_bird_logo_2012.svg">
+            <img height="28" src="/images/20161107041729Twitter_bird_logo_2012.svg">
           </a>
         </div>
       </div>
