--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -16,19 +16,19 @@
         <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
             <a class="links_games w-inline-block" href="https://www.instagram.com/lausanne2020" target="_blank">
-              <img height="30" src="images/Instagram-logo.png" srcset="images/Instagram-logo.png 500w, images/Instagram-logo.png 512w">
+              <img height="30" src="/images/Instagram-logo.png" srcset="/images/Instagram-logo.png 500w, /images/Instagram-logo.png 512w">
             </a>
             <a class="links_games w-inline-block" href="https://www.facebook.com/lausanne2020/" target="_blank">
-              <img height="30" sizes="30px" src="images/facebook-icon-preview-1.png" srcset="images/facebook-icon-preview-1.png 500w, images/facebook-icon-preview-1.png 512w">
+              <img height="30" sizes="30px" src="/images/facebook-icon-preview-1.png" srcset="/images/facebook-icon-preview-1.png 500w, /images/facebook-icon-preview-1.png 512w">
             </a>
             <a class="w-inline-block" href="https://twitter.com/lausanne2020" target="_blank">
-              <img height="24" src="images/20161107041729Twitter_bird_logo_2012.svg">
+              <img height="24" src="/images/20161107041729Twitter_bird_logo_2012.svg">
             </a>
           </div>
         </div>
       </div>
         <a class="w-nav-brand" href="index.html">
-          <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="images/logo-LS2020-YOG-DNA.png" srcset="images/logo-LS2020-YOG-DNA-p-500x150.png 500w, images/logo-LS2020-YOG-DNA.png 600w" width="235">
+          <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="images/logo-LS2020-YOG-DNA.png" srcset="/images/logo-LS2020-YOG-DNA-p-500x150.png 500w, /images/logo-LS2020-YOG-DNA.png 600w" width="235">
         </a>
 
         <!-- Brand and toggle get grouped for better mobile display -->
