--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,6 @@
   </script>
   <!-- End Google Analytics -->
   <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
-  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 
 </head>
