Single news templating

--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -4,7 +4,7 @@ layout: default
 <div class="single-news-content">
 	<header>
 		<div class="news-image">
-	  	<img src="/images/photo_CIO.jpg" alt="">
+	  	<img src="{{page.image.url}}" alt="">
 	  </div>
 	</header>
 	<div class="container news-content">
