--- a/_sass/_single-news.scss
+++ b/_sass/_single-news.scss
@@ -1,7 +1,7 @@
 .single-news-content{
 	margin-top:170px;
 	header{
-		background-image: url(../images/bkg_3.png);
+		background-image: url(../images/bkg_blue.png);
 		background-position: 0px 0px, 0px 0px;
 		background-size: cover;
 		padding: 20px 0;
