--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -51,7 +51,23 @@
     	color: #fff;
     }
     .new{
-    	height: 500px;
+    	height: 425px;
+    	@media (max-width: 992px) {
+	    	height: 650px;
+	    	margin-bottom: 20px;
+		}
+		@media (max-width: 720px) {
+	    	height: 570px;
+		}
+		@media (max-width: 620px) {
+	    	height: 470px;
+		}
+		@media (max-width: 520px) {
+	    	height: 450px;
+		}
+		@media (max-width: 420px) {
+	    	height: 390px;
+		}
     	overflow: hidden;
     	position:relative;
     	background-color: #fff;
@@ -65,6 +81,10 @@
 		    color: #0087cd;
 		    font-size: 26px;
 		    line-height: 32px;
+		    @media (max-width: 700px) {
+	    		font-size: 18px;
+	    		line-height: 24px;
+			}
 		}
     	p{
     		text-align: justify;
