--- a/_layouts/news-archives.html
+++ b/_layouts/news-archives.html
@@ -5,11 +5,9 @@ layout: default
 {% capture nowyear %}{{ site.time | date: '%Y' }}{% endcapture %}
 <div class="news-page">
   <div class="container">
-    <h1 class="h1_big_news h1_newsletter_cta">News {{page.year}}</h1>
+    <h1 class="h1_big_news h1_newsletter_cta">{% t pages.news.archive_link %} {{page.year}}</h1>
     <div class="row">
       <div class="news_section">
-      	<a href="/news-archives/2017" style="color:#fff;">{{nowyear}}</a>
-      	<a href="/news-archives/2017" style="color:#fff;">{{pageyear}}</a>
       	{% assign newsinverted = site.data.contentful.spaces.news.news | reverse %}
       	{% assign offsetdependonyear = 9 %}
       	{% if pageyear < nowyear %}
