--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -19,7 +19,7 @@ layout: default
 	    {% capture text %}{{page.texteLongEn}}{% endcapture %}
 	  {% endif %}
     <h1>{{ title }}</h1>
-    <p>{{ text }}</p>
+    <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
     <p class="news_date">{{page.date | date: "%d.%m.%Y"}}</p>
 	</div>
 </div>
