--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="footer_logo col-md-4">
-        <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="images/l2020_white.png" srcset="/images/l2020_white-p-500x165.png 500w, /images/l2020_white.png 637w" width="307">
+        <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="/images/l2020_white.png" srcset="/images/l2020_white-p-500x165.png 500w, /images/l2020_white.png 637w" width="307">
       </div>
       <div class="col-md-4">
         <div class="copy">copyrights © 2017 | Lausanne2020</div>
