--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-92543526-1', 'auto');
+  ga('create', 'UA-93825370-1', 'auto', 'clientTracker');
   ga('send', 'pageview');
   </script>
   <!-- End Google Analytics -->
