--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,7 @@
   ga('create', 'UA-92543526-1', 'auto');
   ga('create', 'UA-93825370-1', 'auto', 'clientTracker');
   ga('send', 'pageview');
+  ga('clientTracker.send', 'pageview');
   </script>
   <!-- End Google Analytics -->
   <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
