--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,13 +1,14 @@
 <script src="{{site.url}}/js/vendors/jQuery.js"></script>
 <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
 <script src="{{site.url}}/js/vendors/bootstrap.js" type="text/javascript"></script>
-<script src="{{site.url}}/js/common.js" type="text/javascript"></script>
 <!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
 <script src="{{site.url}}/js/vendors/moment-with-locales.min.js"></script>
 <script src="{{site.url}}/js/vendors/featherlight.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
 <script src="https://unpkg.com/object-fit-images/dist/ofi.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
+<script src="{{site.url}}/js/vendors/jquery.digital-fusion.js"></script>
+<script src="{{site.url}}/js/common.js" type="text/javascript"></script>
 <script>
   $(function(){
 
