--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,46 +1,67 @@
-<script src="{{site.url}}/js/vendors/jQuery.js"></script>
+<script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
+<script src="{{site.url}}/js/vendors/jquery.smoothState.min.js" type="text/javascript"></script>
 <script src="{{site.url}}/js/vendors/bootstrap.js" type="text/javascript"></script>
-<!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
 <script src="{{site.url}}/js/vendors/moment-with-locales.min.js"></script>
 <script src="{{site.url}}/js/vendors/featherlight.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
-<script src="https://unpkg.com/object-fit-images/dist/ofi.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script src="{{site.url}}/js/vendors/jquery.digital-fusion.js"></script>
 <script src="{{site.url}}/js/common.js" type="text/javascript"></script>
-<script>
-  $(function(){
 
+<!-- Polyfill -->
+<script src="https://unpkg.com/object-fit-images/dist/ofi.min.js"></script>
+
+<script>
+  $(function () {
+
+    pageLoad()
+
+
+    var $page = $('#main'),
+      options = {
+        debug: true,
+        cacheLength: 4,
+        onStart: {
+          duration: 350, // Duration of our animation
+          render: function ($container) {
+            // Add your CSS animation reversing class
+            $container.addClass('is-exiting');
+            // Restart your animation
+            smoothState.restartCSSAnimations();
+          }
+        },
+        onReady: {
+          duration: 0,
+          render: function ($container, $newContent) {
+            // Remove your CSS animation reversing class
+            $container.removeClass('is-exiting');
+            // Inject the new content
+            $container.html($newContent);
+          }
+        },
+        onAfter: function ($container, $newContent) {
+          pageLoad()
+        }
+      },
+      smoothState = $page.smoothState(options).data('smoothState');
+
+  });
+
+  function pageLoad() {
     // Randomize title at startup
     random_number = 1 + Math.floor(Math.random() * 3);
-    $('.the_claim:nth-of-type('+ random_number +')').addClass('w--current');
+    $('.the_claim').removeClass('w--current');
+    $('.the_claim:nth-of-type(' + random_number + ')').addClass('w--current');
 
     /* SOCIAL_WALL */
     objectFitImages();
     truncate_desc('.desc');
 
     // Truncate quoted status and shared story
-    function truncate_desc(el){
-      $(el).each(function(i, obj) {
-        $el = $(this);
-        $wrap_story= $el.parent();
-        height_available = $wrap_story.outerHeight(true)
-        $ps = $wrap_story.children("*:not(.desc)");
 
-        // measure how tall inside should be by adding together
-        $ps.each(function() {
-          height_available -= $(this).outerHeight(true);
-        });
 
-        $el.css('height', height_available)
-
-        $el.dotdotdot()
-
-      });
-    }
-
-    $( window ).resize(function() {
+    $(window).resize(function () {
       truncate_desc('.desc');
     });
 
@@ -50,9 +71,28 @@
     // Get the language in html attribute lang=
     moment.locale($('html')[0].lang);
     // Change the date for every element time in Social_wall div
-    $('.social_wall').find('time').each(function(i){
-      $( this ).text(moment($( this ).html()).fromNow());
+    $('.social_wall').find('time').each(function (i) {
+      $(this).text(moment($(this).html()).fromNow());
     });
 
-  });
+  }
+
+  function truncate_desc(el) {
+    $(el).each(function (i, obj) {
+      $el = $(this);
+      $wrap_story = $el.parent();
+      height_available = $wrap_story.outerHeight(true)
+      $ps = $wrap_story.children("*:not(.desc)");
+
+      // measure how tall inside should be by adding together
+      $ps.each(function () {
+        height_available -= $(this).outerHeight(true);
+      });
+
+      $el.css('height', height_available)
+
+      $el.dotdotdot()
+
+    });
+  }
 </script>
