Add vmin padding header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,11 +39,10 @@
         </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a class="" href="{% t footer.link.beijing %}" target="_blank">
+            <a class="links_games" href="{% t footer.link.beijing %}" target="_blank">
           <img height="80" src="/images/Beijing_2022_emblem.jpg">
         </a>
           </div>
-        
         
           <div class="col-md-3 col-xs-6">
             <a class="links_games" href="{% t footer.link.buenos %}" target="_blank">
