--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -21,7 +21,7 @@
             <a class="links_games w-inline-block" href="https://www.facebook.com/lausanne2020/" target="_blank">
               <img height="30" sizes="30px" src="/images/facebook-icon-preview-1.png" srcset="/images/facebook-icon-preview-1.png 500w, /images/facebook-icon-preview-1.png 512w">
             </a>
-            <a class="w-inline-block" href="https://twitter.com/lausanne2020" target="_blank">
+            <a class="links_games w-inline-block" href="https://twitter.com/lausanne2020" target="_blank">
               <img height="24" src="/images/20161107041729Twitter_bird_logo_2012.svg">
             </a>
           </div>
