--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,221 +1,296 @@
-body{
-  font-family: Montserrat, sans-serif;
+body {
+    font-family: Montserrat, sans-serif;
 }
+
 textarea {
-   resize:vertical;
+    resize: vertical;
 }
 
 // Hidden field in form contact against bot spam (leave the name in french)
-.cache{
-  display:none;
+.cache {
+    display: none;
 }
 
 // Custom Navigation Bar
-
 .navbar-custom {
     background-color: white;
     border-color: transparent;
+    padding: 2vmin 0;
     .navbar-toggle {
         font-size: 18px;
     }
-    .container{
-      padding-left:0;
+    .container {
+        padding-left: 0;
     }
 }
 
-.nav_link, .nav_link:hover, .nav_link:visited, .nav_link:active {
-  font-family: Sanchez, sans-serif;
-  color: $blue-primary;
-  text-transform: uppercase;
-  text-decoration:none !important;
+.nav_link,
+.nav_link:hover,
+.nav_link:visited,
+.nav_link:active {
+    font-family: Sanchez, sans-serif;
+    color: $blue-primary;
+    text-transform: uppercase;
+    text-decoration: none !important;
 }
-.nav_link span{
-  color: $blue-primary;
+
+.nav_link span {
+    color: $blue-primary;
 }
 
 .nav_link.w--current {
-  border-bottom: 2px solid $purple-primary;
-  font-family: Sanchez, sans-serif;
-  color: $purple-primary;
-  font-weight: 400;
+    border-bottom: 2px solid $purple-primary;
+    font-family: Sanchez, sans-serif;
+    color: $purple-primary;
+    font-weight: 400;
 }
 
-.nav_link.w--current span{
-  color: $purple-primary;
-}
-@media (min-width: 768px){
-  .nav_link.nav_lang{
-    padding-left: 5px;
-    padding-right:0;
-  }
-  .w-nav_lang{
-    display:inline;
-  }
-
-}
-@media (max-width: 767px){
-  .navbar-collapse .nav_link.nav_lang{
-    display:inline;
-    padding:0;
-  }
-  .nav_link{
-    margin-left: 20px;
-  }
-  .w-nav_lang{
-    padding:20px;
-  }
-}
-.nav_lang.accent{
-  color:$purple-primary;
-  font-weight: 700;
+.nav_link.w--current span {
+    color: $purple-primary;
 }
 
+@media (min-width: 768px) {
+    .nav_link.nav_lang {
+        padding-left: 5px;
+        padding-right: 0;
+    }
+    .w-nav_lang {
+        display: inline;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-collapse .nav_link.nav_lang {
+        display: inline;
+        padding: 0;
+    }
+    .nav_link {
+        margin-left: 20px;
+    }
+    .w-nav_lang {
+        padding: 20px;
+    }
+}
+
+.nav_lang.accent {
+    color: $purple-primary;
+    font-weight: 700;
+}
 
 // Footer
-
-.footer{
-  position: relative;
-  z-index: 3000;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: $dark-blue;
-  .footer_link{
-    &:hover, &:focus{
-      color:#0087cd;
+.footer {
+    position: relative;
+    z-index: 3000;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: $dark-blue;
+    .footer_link {
+        &:hover,
+        &:focus {
+            color: #0087cd;
+        }
     }
-  }
 }
 
-.top_footer{
-  position: absolute;
-  left: 0px;
-  top: -61px;
-  right: 0px;
-  display: block;
-  height: 111px;
-  padding-top: 0px;
-  background-image: url('/images/wave_footer_top.svg');
-  background-position: 50% 29%;
-  background-size: cover;
-  background-repeat: repeat-x;
-  background-attachment: scroll;
+.top_footer {
+    position: absolute;
+    left: 0px;
+    top: -61px;
+    right: 0px;
+    display: block;
+    height: 111px;
+    padding-top: 0px;
+    background-image: url('/images/wave_footer_top.svg');
+    background-position: 50% 29%;
+    background-size: cover;
+    background-repeat: repeat-x;
+    background-attachment: scroll;
 }
 
 @media(min-width:768px) {
     .navbar-custom {
-        padding: 17px 0;
         -webkit-transition: all 0.3s;
         -moz-transition: all 0.3s;
         transition: all 0.3s;
         border: none;
     }
     //Contact
-    .form-contact{
-      margin-left: 10px;
+    .form-contact {
+        margin-left: 10px;
     }
 }
 
 // Navbar Change on Scroll
-
 @media(max-width:767px) {
-  .w-nav-brand .logo{
-      padding:17px 10px 0 30px;
-  }
+    .w-nav-brand .logo {
+        padding: 17px 10px 0 30px;
+    }
     .navbar-header {
-      padding: 20px 0;
-      background-color: #FFF;
-      .navbar-toggle{
-        margin-bottom: -20px;
-        background-color: #C8C8C8;
-        border-radius: 0;
-        height: 70px;
-        color: white;
-        padding: 0 20px;
-        margin-top: 0px;
-
-        &.collapsed{
-          background-color: #FFF;
-          color:black;
-          .icon-nav{
-            color:#000;
-          }
+        padding: 20px 0;
+        background-color: #FFF;
+        .navbar-toggle {
+            margin-bottom: -20px;
+            background-color: #C8C8C8;
+            border-radius: 0;
+            height: 70px;
+            color: white;
+            padding: 0 20px;
+            margin-top: 0px;
+            &.collapsed {
+                background-color: #FFF;
+                color: black;
+                .icon-nav {
+                    color: #000;
+                }
+            }
         }
-      }
     }
     .navbar-collapse {
-      margin-top: -10px;
-      background-color: #C8C8C8;
+        margin-top: -10px;
+        background-color: #C8C8C8;
         .nav_link {
-          display:block;
+            display: block;
         }
     }
     //Contact
-    .row{
-      margin:0;
+    .row {
+        margin: 0;
     }
     //footer
     .top_footer {
         top: -60px;
     }
 }
-.botbar{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  a:hover, a:focus{
-    text-decoration: none;
-  }
-}
+
 .links_social {
-  padding-top: 22px;
-  text-align: right;
+    padding:17px 0; // For polyfill
+    padding: 1vmin 0;
+    text-align: right;
 }
-.header-pics .links_social{
-  padding-bottom: 22px;
-  padding-top:8px;
+
+.botbar {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    a:hover,
+    a:focus {
+        text-decoration: none;
+    }
 }
-@media (max-width: 992px){
-  .footer-pics{
-    text-align: center;
-  }
-  .footer-pics .links_social {
-    text-align: center;
-  }
-  .footer_link {
-      text-align: center;
-  }
-  .footer_logo {
-      text-align: center;
-  }
-  .copy {
-      margin-bottom: 20px;
-  }
-  .top_footer {
-    left: 0px;
-    top: -61px;
-    right: 0px;
-  }
+
+@media (max-width: 992px) {
+    .footer-pics {
+        text-align: center;
+    }
+    .footer-pics .links_social {
+        text-align: center;
+    }
+    .footer_link {
+        text-align: center;
+    }
+    .footer_logo {
+        text-align: center;
+    }
+    .copy {
+        margin-bottom: 20px;
+    }
+    .top_footer {
+        left: 0px;
+        top: -61px;
+        right: 0px;
+    }
+    .botbar .links_social {
+        padding: 20px 0 10px 0;
+        padding: 4vmin 0 1vmin 0;
+    }
 }
+
 .links_games {
-  margin-right: 20px;
+    margin-right: 20px;
 }
+
 .come-in {
-  transform: translateY(150px);
-  animation: come-in 0.8s ease forwards;
+    transform: translateY(150px);
+    animation: come-in 0.8s ease forwards;
 }
+
 .come-in:nth-child(odd) {
-  animation-duration: 0.6s; /* So they look staggered */
+    animation-duration: 0.6s;
+    /* So they look staggered */
 }
-.fade-in{
-  animation: fadein 2s;
+
+.fade-in {
+    animation: fadein 2s;
 }
+
 .already-visible {
-  transform: translateY(0);
-  animation: none;
+    transform: translateY(0);
+    animation: none;
 }
+
 @keyframes come-in {
-  to { transform: translateY(0); }
+    to {
+        transform: translateY(0);
+    }
 }
+
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+/* Box-shadow Inset */
+
+#main>div:nth-last-of-type(2n+1):not(.hero):not(.botbar):not(.footer) {
+    -webkit-box-shadow: inset 10px 10px 59px -10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: inset 10px 10px 59px -10px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 10px 10px 59px -10px rgba(0, 0, 0, 0.4);
+}
+
+
+/* ===========================================
+   SmoothState styling
+   =========================================== */
+
+#main>div {
+    -webkit-animation-duration: 1.25s;
+    animation-duration: 1.25s;
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+#main.is-exiting>div {
+    -webkit-animation-direction: alternate-reverse;
+    animation-direction: alternate-reverse;
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.is-loading,
+.is-loading a {
+    cursor: progress;
 }
