--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -1,3 +1,27 @@
+@keyframes come-in {
+    to {
+        transform: translateY(0);
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 @keyframes fadeindown{
 	from{
 		transform: translate(0px, -31px);
