--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -27,7 +27,7 @@
 
 /* Line slider */
 
-.nav_link::before {
+.nav_link:not(.nav_lang)::before {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -39,7 +39,7 @@
     transition: transform 0.1s;
 }
 
-.nav_link.w--current::before {
+.nav_link:not(.nav_lang).w--current::before {
 	transform: scale3d(1, 1, 1);
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 0.3s;
