--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -12,7 +12,7 @@
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container">
-      <div class="row">
+      <div class="row socials slidein">
         <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
             <a class="links_games w-inline-block" href="https://www.instagram.com/lausanne2020" target="_blank">
