Fix bug hide/show socials

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,15 +90,15 @@ textarea {
     animation: none;
 }
 
-.slidein, .slideup {
+.slidedown, .slideup {
     opacity: 0;
     overflow-y: hidden;
     max-height: 0px;
     transition-property: all;
-    transition-duration: .5s;
+    transition-duration: .8s;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
 }
-.slidein {
+.slidedown {
     opacity: 1;
     max-height: 50px;
 }
