News are completely clickable

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -72,6 +72,9 @@ html .hero{
     .h1_big_news{
     	color: #fff;
     }
+    .news-clickable{
+    	display: block;
+    }
     .new{
     	height: 425px;
     	@media (max-width: 992px) {
