Fix bug to redirect to home when clicking on main logo

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -27,7 +27,7 @@
           </div>
         </div>
       </div>
-        <a class="w-nav-brand" href="index.html">
+        <a class="w-nav-brand" href="{{nav[0].path}}">
           <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="/images/logo-LS2020-YOG-DNA.png" srcset="/images/logo-LS2020-YOG-DNA-p-500x150.png 500w, /images/logo-LS2020-YOG-DNA.png 600w" width="235">
         </a>
 
