--- a/_layouts/single-news-fr.html
+++ b/_layouts/single-news-fr.html
@@ -8,8 +8,10 @@ layout: default
 	  </div>
 	</header>
 	<div class="container news-content">
-    <h1>{{ page.titreEn }}</h1>
-    <p>{{ page.texteLongEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+	    {% capture title %}{% endcapture %}
+	    {% capture text %}{% endcapture %}
+    <h1>{{page.titre}}</h1>
+    <p>{{ page.texteLong | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
     <p class="news_date">{{page.date | date: "%d.%m.%Y"}}</p>
 	</div>
 </div>
